load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//shared/bazel/rules/publishing:publishing.bzl", "wpilib_publish")
load("//shared/bazel/rules/robotpy:compatibility_select.bzl", "robotpy_compatibility_select")

pkg_files(
    name = "license_pkg_files",
    srcs = ["LICENSE.md"],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "third_party_notices_pkg_files",
    srcs = ["ThirdPartyNotices.txt"],
    visibility = ["//visibility:public"],
)

wpilib_publish(
    name = "publish",
    bundles = [
        "//wpiutil:publishing_bundle",
        "//wpinet:publishing_bundle",
        "//datalog:publishing_bundle",
        "//ntcore:publishing_bundle",
        "//hal:publishing_bundle",
        "//cscore:publishing_bundle",
        "//fieldImages:publishing_bundle",
        "//wpigui:publishing_bundle",
        "//cameraserver:publishing_bundle",
        "//thirdparty/imgui_suite:publishing_bundle",
        "//thirdparty/googletest:publishing_bundle",
        "//epilogue-runtime:publishing_bundle",
        "//epilogue-processor:publishing_bundle",
        "//wpiunits:publishing_bundle",
        "//wpimath:publishing_bundle",
        "//wpilibc:publishing_bundle",
        "//wpilibj:publishing_bundle",
        "//wpilibNewCommands:publishing_bundle",
        "//apriltag:publishing_bundle",
        "//xrpVendordep:publishing_bundle",
        "//romiVendordep:publishing_bundle",
        "//wpilibjExamples:commands-publshing-bundle",
        "//wpilibjExamples:examples-publshing-bundle",
        "//wpilibjExamples:templates-publshing-bundle",
        "//wpilibcExamples:commands-publshing-bundle",
        "//wpilibcExamples:examples-publshing-bundle",
        "//wpilibcExamples:templates-publshing-bundle",
        "//glass:libglass_publishing_bundle",
        "//glass:libglassnt_publishing_bundle",
        "//simulation/halsim_ds_socket:publishing_bundle",
        "//simulation/halsim_gui:publishing_bundle",
        "//simulation/halsim_ws_client:publishing_bundle",
        "//simulation/halsim_ws_core:publishing_bundle",
        "//simulation/halsim_ws_server:publishing_bundle",
        "//simulation/halsim_xrp:publishing_bundle",
    ],
)

# bazel build //:requirements.lock
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "//:requirements_windows_lock.txt",
    # compile_pip_requirements does not respect target_compatible_with for some of the targets it generates under the hood
    tags = ["no-systemcore"],
)

java_binary(
    name = "copybara",
    main_class = "com.google.copybara.Main",
    runtime_deps = ["@com_github_google_copybara//jar"],
)

alias(
    name = "quickbuf_protoc",
    actual = select({
        "@platforms//os:windows": "@quickbuffer_protoc_windows//file",
        "@rules_bzlmodrio_toolchains//conditions:osx_aarch64": "@quickbuffer_protoc_osx_aarch64//file",
        "@rules_bzlmodrio_toolchains//conditions:osx_x86_64": "@quickbuffer_protoc_osx_x86-64//file",
        "@rules_bzlmodrio_toolchains//constraints/combined:is_linux": "@quickbuffer_protoc_linux//file",
    }),
    tags = ["pregeneration"],
    visibility = ["//visibility:public"],
)

# This is a helper to run all of the pregeneration scripts at once.
write_source_files(
    name = "write_pregenerated_sources",
    additional_update_targets = [
        "//hal:write_hal",
        "//ntcore:write_ntcore",
        "//wpilibc:write_wpilibc",
        "//wpilibcExamples:write_example_project_list",
        "//wpilibj:write_wpilibj",
        "//wpilibjExamples:write_example_project_list",
        "//wpilibNewCommands:write_wpilib_new_commands",
        "//wpimath:write_wpimath",
        "//wpiunits:write_wpiunits",
        "//wpiutil:write_wpiutil",
    ],
    tags = ["pregeneration"],
)

write_source_files(
    name = "write_robotpy_generated_native_files",
    additional_update_targets = [
        "//apriltag:robotpy-native-apriltag-generator.generate_build_info",
        "//datalog:robotpy-native-datalog-generator.generate_build_info",
        "//hal:robotpy-native-wpihal-generator.generate_build_info",
        "//ntcore:robotpy-native-ntcore-generator.generate_build_info",
        "//wpilibc:robotpy-native-wpilib-generator.generate_build_info",
        "//wpinet:robotpy-native-wpinet-generator.generate_build_info",
        "//wpimath:robotpy-native-wpimath-generator.generate_build_info",
        "//wpiutil:robotpy-native-wpiutil-generator.generate_build_info",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

write_source_files(
    name = "write_robotpy_generated_pybind_files",
    additional_update_targets = [
        "//apriltag:robotpy-apriltag-generator.generate_build_info",
        "//datalog:robotpy-datalog-generator.generate_build_info",
        "//hal:robotpy-hal-generator.generate_build_info",
        "//ntcore:pyntcore-generator.generate_build_info",
        "//wpilibc:robotpy-wpilib-generator.generate_build_info",
        "//wpinet:robotpy-wpinet-generator.generate_build_info",
        "//wpimath:robotpy-wpimath-generator.generate_build_info",
        "//wpimath:robotpy-wpimath_test-generator.generate_build_info",
        "//wpiutil:robotpy-wpiutil-generator.generate_build_info",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

write_source_files(
    name = "write_all",
    additional_update_targets = [
        ":write_pregenerated_sources",
        ":write_robotpy_generated_native_files",
        ":write_robotpy_generated_pybind_files",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
)


publish_all(
    name = "publish",
    targets = [
        "//apriltag:apriltag-cpp_publish",
        "//apriltag:apriltag-java_publish",
        "//cameraserver:cameraserver-cpp_publish",
        "//cameraserver:cameraserver-java_publish",
        "//cscore:cscore-cpp_publish",
        "//cscore:cscore-java_publish",
        "//datalog:datalog-cpp_publish",
        "//datalog:datalog-java_publish",
        "//datalogtool:datalogtool_publish",
        "//epilogue-processor:processor-java_publish",
        "//processstarter:processstarter_publish",
        "//epilogue-runtime:epilogue-java_publish",
        "//fieldImages:fieldImages-cpp_publish",
        "//fieldImages:fieldImages-java_publish",
        "//glass:glassapp_publish",
        "//glass:glass-cpp_publish",
        "//glass:glassnt-cpp_publish",
        "//hal:hal-java_publish",
        "//hal:wpiHal-cpp_publish",
        "//ntcore:ntcore-cpp_publish",
        "//ntcore:ntcore-java_publish",
        "//outlineviewer:outlineviewer_publish",
        "//romiVendordep:romiVendordep-cpp_publish",
        "//romiVendordep:romiVendordep-java_publish",
        "//simulation/halsim_ds_socket:halsim_ds_socket-cpp_publish",
        "//simulation/halsim_gui:halsim_gui-cpp_publish",
        "//simulation/halsim_ws_client:halsim_ws_client-cpp_publish",
        "//simulation/halsim_ws_core:halsim_ws_core-cpp_publish",
        "//simulation/halsim_ws_server:halsim_ws_server-cpp_publish",
        "//simulation/halsim_xrp:halsim_xrp-cpp_publish",
        "//sysid:sysid_publish",
        "//thirdparty/googletest:googletest-cpp_publish",
        "//thirdparty/imgui_suite:imguiSuite-cpp_publish",
        "//wpigui:wpigui-cpp_publish",
        "//wpilibNewCommands:wpilibNewCommands-cpp_publish",
        "//wpilibNewCommands:wpilibNewCommands-java_publish",
        "//wpilibc:wpilibc-cpp_publish",
        "//wpilibcExamples:commands_publish",
        "//wpilibcExamples:examples_publish",
        "//wpilibcExamples:templates_publish",
        "//wpilibj:wpilibj-java_publish",
        "//wpilibjExamples:commands_publish",
        "//wpilibjExamples:examples_publish",
        "//wpilibjExamples:templates_publish",
        "//wpimath:wpimath-cpp_publish",
        "//wpimath:wpimath-java_publish",
        "//wpinet:wpinet-cpp_publish",
        "//wpinet:wpinet-java_publish",
        "//wpiunits:wpiunits-java_publish",
        "//wpiutil:wpiutil-cpp_publish",
        "//wpiutil:wpiutil-java_publish",
        "//xrpVendordep:xrpVendordep-cpp_publish",
        "//xrpVendordep:xrpVendordep-java_publish",
    ]
)

write_source_files(
    name = "write_robotpy_create_yaml_files",
    additional_update_targets = [
        "//apriltag:write_robotpy-create-yaml",
        "//datalog:write_robotpy-create-yaml",
        "//hal:write_robotpy-create-yaml",
        "//ntcore:write_robotpy-create-yaml",
        "//wpilibc:write_robotpy-create-yaml",
        "//wpinet:write_robotpy-create-yaml",
        "//wpimath:write_robotpy-create-yaml",
        "//wpimath:write_robotpy-create-test-yaml",
        "//wpiutil:write_robotpy-create-yaml",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

# Helper easily run the semiwrap parsing tools on all of the robotpy projects.
filegroup(
    name = "robotpy_generated_files",
    srcs = [
        "//apriltag:robotpy-apriltag.generated_files",
        "//datalog:robotpy-wpilog.generated_files",
        "//hal:robotpy-hal.generated_files",
        "//ntcore:pyntcore.generated_files",
        "//wpilibc:robotpy-wpilib.generated_files",
        "//wpimath:robotpy-wpimath.generated_files",
        "//wpimath:robotpy-wpimath-test.generated_files",
        "//wpinet:robotpy-wpinet.generated_files",
        "//wpiutil:robotpy-wpiutil.generated_files",
    ],
    tags = ["manual"],
    target_compatible_with = robotpy_compatibility_select(),
)
