load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//shared/bazel/rules:publishing.bzl", "publish_all")
load("//shared/bazel/rules/robotpy:compatibility_select.bzl", "robotpy_compatibility_select")

exports_files([
    "LICENSE.md",
    "ThirdPartyNotices.txt",
])

pkg_files(
    name = "license_pkg_files",
    srcs = [
        "LICENSE.md",
        "ThirdPartyNotices.txt",
    ],
    visibility = ["//visibility:public"],
)

# bazel build //:requirements.lock
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "//:requirements_windows_lock.txt",
    # compile_pip_requirements does not respect target_compatible_with for some of the targets it generates under the hood
    tags = ["no-systemcore"],
)

java_binary(
    name = "copybara",
    main_class = "com.google.copybara.Main",
    runtime_deps = ["@com_github_google_copybara//jar"],
)

alias(
    name = "quickbuf_protoc",
    actual = select({
        "@platforms//os:windows": "@quickbuffer_protoc_windows//file",
        "@rules_bzlmodrio_toolchains//conditions:osx_aarch64": "@quickbuffer_protoc_osx_aarch64//file",
        "@rules_bzlmodrio_toolchains//conditions:osx_x86_64": "@quickbuffer_protoc_osx_x86-64//file",
        "@rules_bzlmodrio_toolchains//constraints/combined:is_linux": "@quickbuffer_protoc_linux//file",
    }),
    tags = ["pregeneration"],
    visibility = ["//visibility:public"],
)

# This is a helper to run all of the pregeneration scripts at once.
write_source_files(
    name = "write_all",
    additional_update_targets = [
        "//hal:write_hal",
        "//ntcore:write_ntcore",
        "//wpilibc:write_wpilibc",
        "//wpilibcExamples:write_example_project_list",
        "//wpilibj:write_wpilibj",
        "//wpilibjExamples:write_example_project_list",
        "//wpilibNewCommands:write_wpilib_new_commands",
        "//wpimath:write_wpimath",
        "//wpiunits:write_wpiunits",
        "//wpiutil:write_wpiutil",
    ],
    tags = ["pregeneration"],
)

publish_all(
    name = "publish",
    targets = [
        "//apriltag:apriltag-cpp_publish.publish",
        "//apriltag:apriltag-java_publish.publish",
        "//cameraserver:cameraserver-cpp_publish.publish",
        "//cameraserver:cameraserver-java_publish.publish",
        "//cscore:cscore-cpp_publish.publish",
        "//cscore:cscore-java_publish.publish",
        "//datalog:datalog-cpp_publish.publish",
        "//datalog:datalog-java_publish.publish",
        "//datalogtool:datalogtool_publish.publish",
        "//docs:wpilibj_publish.publish",
        "//epilogue-processor:processor-java_publish.publish",
        "//epilogue-runtime:epilogue-java_publish.publish",
        "//fieldImages:fieldImages-cpp_publish.publish",
        "//fieldImages:fieldImages-java_publish.publish",
        "//glass:glass-cpp_publish.publish",
        "//glass:glassapp_publish.publish",
        "//glass:glassnt-cpp_publish.publish",
        "//hal:hal-java_publish.publish",
        "//hal:wpiHal-cpp_publish.publish",
        "//ntcore:ntcore-cpp_publish.publish",
        "//ntcore:ntcore-java_publish.publish",
        "//ntcoreffi:ntcoreffi-cpp_publish.publish",
        "//outlineviewer:outlineviewer_publish.publish",
        "//processstarter:processstarter_publish.publish",
        "//romiVendordep:romiVendordep-cpp_publish.publish",
        "//romiVendordep:romiVendordep-java_publish.publish",
        "//simulation/halsim_ds_socket:halsim_ds_socket-cpp_publish.publish",
        "//simulation/halsim_gui:halsim_gui-cpp_publish.publish",
        "//simulation/halsim_ws_client:halsim_ws_client-cpp_publish.publish",
        "//simulation/halsim_ws_core:halsim_ws_core-cpp_publish.publish",
        "//simulation/halsim_ws_server:halsim_ws_server-cpp_publish.publish",
        "//simulation/halsim_xrp:halsim_xrp-cpp_publish.publish",
        "//sysid:sysid_publish.publish",
        "//thirdparty/googletest:googletest-cpp_publish.publish",
        "//thirdparty/imgui_suite:imguiSuite-cpp_publish.publish",
        "//wpical:wpical_publish.publish",
        "//wpigui:wpigui-cpp_publish.publish",
        "//wpilibNewCommands:wpilibNewCommands-cpp_publish.publish",
        "//wpilibNewCommands:wpilibNewCommands-java_publish.publish",
        "//wpilibc:wpilibc-cpp_publish.publish",
        "//wpilibcExamples:commands_publish.publish",
        "//wpilibcExamples:examples_publish.publish",
        "//wpilibcExamples:templates_publish.publish",
        "//wpilibj:wpilibj-java_publish.publish",
        "//wpilibjExamples:commands_publish.publish",
        "//wpilibjExamples:examples_publish.publish",
        "//wpilibjExamples:templates_publish.publish",
        "//wpimath:wpimath-cpp_publish.publish",
        "//wpimath:wpimath-java_publish.publish",
        "//wpinet:wpinet-cpp_publish.publish",
        "//wpinet:wpinet-java_publish.publish",
        "//wpiunits:wpiunits-java_publish.publish",
        "//wpiutil:wpiutil-cpp_publish.publish",
        "//wpiutil:wpiutil-java_publish.publish",
        "//xrpVendordep:xrpVendordep-cpp_publish.publish",
        "//xrpVendordep:xrpVendordep-java_publish.publish",
    ] + select({
        "@platforms//cpu:x86_64": [
            "//docs:wpilibc_publish.publish",
        ],
        "//conditions:default": [],
    }),
)

write_source_files(
    name = "write_robotpy_generated_native_files",
    additional_update_targets = [
        "//apriltag:robotpy-native-apriltag-generator.generate_build_info",
        "//datalog:robotpy-native-datalog-generator.generate_build_info",
        "//hal:robotpy-native-wpihal-generator.generate_build_info",
        "//ntcore:robotpy-native-ntcore-generator.generate_build_info",
        "//wpilibc:robotpy-native-wpilib-generator.generate_build_info",
        "//wpinet:robotpy-native-wpinet-generator.generate_build_info",
        "//wpimath:robotpy-native-wpimath-generator.generate_build_info",
        "//wpiutil:robotpy-native-wpiutil-generator.generate_build_info",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

write_source_files(
    name = "write_robotpy_generated_pybind_files",
    additional_update_targets = [
        "//apriltag:robotpy-apriltag-generator.generate_build_info",
        "//datalog:robotpy-datalog-generator.generate_build_info",
        "//hal:robotpy-hal-generator.generate_build_info",
        "//ntcore:pyntcore-generator.generate_build_info",
        "//romiVendordep:robotpy-romi-generator.generate_build_info",
        "//wpilibc:robotpy-wpilib-generator.generate_build_info",
        "//wpinet:robotpy-wpinet-generator.generate_build_info",
        "//wpimath:robotpy-wpimath-generator.generate_build_info",
        "//wpimath:robotpy-wpimath_test-generator.generate_build_info",
        "//wpiutil:robotpy-wpiutil-generator.generate_build_info",
        "//xrpVendordep:robotpy-xrp-generator.generate_build_info",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

write_source_files(
    name = "write_robotpy_update_yaml_files",
    additional_update_targets = [
        "//apriltag:write_robotpy-apriltag-update-yaml",
        "//datalog:write_robotpy-wpilog-update-yaml",
        "//hal:write_robotpy-hal-update-yaml",
        "//ntcore:write_pyntcore-update-yaml",
        "//wpilibc:write_robotpy-wpilib-update-yaml",
        "//wpinet:write_robotpy-wpinet-update-yaml",
        "//wpimath:write_robotpy-wpimath-update-yaml",
        "//wpimath:write_robotpy-wpimath-test-update-yaml",
        "//wpiutil:write_robotpy-wpiutil-update-yaml",
    ],
    tags = [
        "pregeneration",
        "robotpy",
    ],
    target_compatible_with = robotpy_compatibility_select(),
)

# Helper easily run the semiwrap parsing tools on all of the robotpy projects.
filegroup(
    name = "robotpy_generated_files",
    srcs = [
        "//apriltag:robotpy-apriltag.generated_files",
        "//datalog:robotpy-wpilog.generated_files",
        "//hal:robotpy-hal.generated_files",
        "//ntcore:pyntcore.generated_files",
        "//wpilibc:robotpy-wpilib.generated_files",
        "//wpimath:robotpy-wpimath.generated_files",
        "//wpimath:robotpy-wpimath-test.generated_files",
        "//wpinet:robotpy-wpinet.generated_files",
        "//wpiutil:robotpy-wpiutil.generated_files",
    ],
    tags = ["manual"],
    target_compatible_with = robotpy_compatibility_select(),
)
