module(
    name = "allwpilib",
    version = "2023.4.3",
    compatibility_level = 2023,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "bzlmodrio-libssh", version = "2024.0.105-1")
bazel_dep(name = "bzlmodrio-ni", version = "2025.2.0")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr1")
bazel_dep(name = "rules_bazelrio", version = "0.0.13")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.8.1-1")
bazel_dep(name = "protobuf", version = "29.0")

archive_override(
    module_name = "rules_bzlmodrio_jdk",
    integrity = "sha256-SrikyrF2v2lENdqn9aFC//d0TkIE620lR60yXTrWFTs=",
    strip_prefix = "rules_bzlmodrio_jdk-4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773",
    urls = ["https://github.com/wpilibsuite/rules_bzlmodRio_jdk/archive/4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773.tar.gz"],
)

archive_override(
    module_name = "bzlmodrio-libssh",
    integrity = "sha256-efcZToKHmvBEWZiDyz+/E6/kuvA99tqXfVvq7XiP1ng=",
    strip_prefix = "bzlmodRio-libssh-fc9ad9a0e143c5955cb08f409b7fae53fe6a2b40",
    urls = ["https://github.com/bzlmodrio/bzlmodRio-libssh/archive/fc9ad9a0e143c5955cb08f409b7fae53fe6a2b40.tar.gz"],
)

archive_override(
    module_name = "bzlmodrio-opencv",
    integrity = "sha256-qEoQi9VDx4hKQv+6nohJQfykR6+CA3T/dWg2CFSmM38=",
    strip_prefix = "bzlmodRio-opencv-515c8a17dbbdecf1970a04a41131b77eeb33027e",
    urls = ["https://github.com/bzlmodrio/bzlmodrio-opencv/archive/515c8a17dbbdecf1970a04a41131b77eeb33027e.tar.gz"],
)

# git_override(
#     module_name = "rules_bzlmodrio_jdk",
#     commit = "32d4c03e8343a17dbc0b4bdf1a482e77a3d37058",
#     remote = "https://github.com/bzlmodRio/rules_bzlmodrio_jdk",
# )

# local_path_override(
#     module_name = "rules_bzlmodrio_jdk",
#     path = "/home/pjreiniger/git/bzlmodRio/monorepo/rules/rules_bzlmodrio_jdk",
# )

# local_path_override(
#     module_name = "rules_bzlmodrio_toolchains",
#     path = "C:/Users/PJ/git/bzlmodrio/monorepo/rules/rules_bzlmodrio_toolchains",
# )

# local_path_override(
#     module_name = "bzlmodrio-opencv",
#     path = "/home/pjreiniger/git/bzlmodRio/monorepo/libraries/bzlmodRio-opencv",
# )

# local_path_override(
#     module_name = "bzlmodrio-libssh",
#     path = "/home/pjreiniger/git/bzlmodRio/monorepo/libraries/bzlmodRio-libssh",
# )


maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.ejml:ejml-simple:0.43.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "com.fasterxml.jackson.core:jackson-core:2.15.2",
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "org.junit.jupiter:junit-jupiter:5.10.1",
        "org.junit.platform:junit-platform-console:1.10.1",
        "org.junit.platform:junit-platform-launcher:1.10.1",
        "org.junit.platform:junit-platform-reporting:1.10.1",
        "com.google.code.gson:gson:2.10.1",
        "org.hamcrest:hamcrest-all:1.3",
        "com.googlecode.junit-toolbox:junit-toolbox:2.4",
        "org.apache.ant:ant:1.10.12",
        "org.apache.ant:ant-junit:1.10.12",
        "org.mockito:mockito-core:4.1.0",
        "us.hebi.quickbuf:quickbuf-runtime:1.3.3",
        "junit:junit:4.13.2",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.testing.compile:compile-testing:0.21.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    # lock_file = "@//shared/bazel/deps:maven_install.json",
)
use_repo(
    maven,
    "maven",
)

setup_quickbuf_protoc = use_extension("//shared/bazel/deps:quickbuf_protoc.bzl", "setup_quickbuf_protoc")
use_repo(
    setup_quickbuf_protoc,
    "quickbuffer_protoc_linux",
    "quickbuffer_protoc_osx",
    "quickbuffer_protoc_windows",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "allwpilib_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "allwpilib_pip_deps")
